[package]
name = "job_scheduler"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["cookies"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.24"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tokio-cron-scheduler = { version = "*", features = ["signal"] }
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.10"
tokio-util = "0.7.17"
